added composer dependency

--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,26 @@
     "issues": "https://www.drupal.org/project/issues/cmrf_core",
     "source": "http://cgit.drupalcode.org/cmrf_core"
   },
-  "require": { }
+  "repositories": [
+    {
+      "type": "package",
+      "package": {
+        "name": "CiviMRF/CMRF_Abstract_Core",
+        "version": "0.1",
+        "source": {
+          "url": "https://github.com/CiviMRF/CMRF_Abstract_Core.git",
+          "type": "git",
+          "reference": "master"
+        },
+        "autoload": {
+          "psr-0" : {
+            "CMRF" : "src"
+          }
+        }
+      }
+    }
+  ],
+  "require": {
+    "CiviMRF/CMRF_Abstract_Core": "0.1"
+  }
 }
