Rename everything 'credential' to 'profile'
we want to keep the wordings consistent between modules for Drupal 7 and Drupal 8

--- a/cmrf_core.links.action.yml
+++ b/cmrf_core.links.action.yml
@@ -1,5 +1,5 @@
-entity.cmrf_credentials.add_form:
-  route_name: entity.cmrf_credentials.add_form
-  title: 'Add CMRF Credentials'
+entity.cmrf_profile.add_form:
+  route_name: entity.cmrf_profile.add_form
+  title: 'Add CMRF profile'
   appears_on:
-    - entity.cmrf_credentials.collection
+    - entity.cmrf_profile.collection
