updated composer.json to include the latest master of the abstract core.

--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,10 @@
 {
 "repositories": [
     {
-        "type": "package",
-        "package": {
-            "name": "CiviMRF/CMRF_Abstract_Core",
-            "version": "0.1",
-            "source": {
-                "url": "https://github.com/CiviMRF/CMRF_Abstract_Core.git",
-                "type": "git",
-                "reference": "master"
-            },
-            "autoload": {
-                "psr-0": {
-                    "CMRF": ""
-                }
-            }
-        }
+        "type": "vcs",
+        "url": "https://github.com/CiviMRF/CMRF_Abstract_Core.git"
     }],
     "require": {
-        "CiviMRF/CMRF_Abstract_Core": "0.1"
+        "CiviMRF/CMRF_Abstract_Core": "dev-master"
     }
 }
