--- a/cmrf_webform/cmrf_webform.services.yml
+++ b/cmrf_webform/cmrf_webform.services.yml
@@ -5,4 +5,4 @@ services:
 
   cmrf_webform.submissions_manager:
     class: Drupal\cmrf_webform\CMRFSubmissionsManager
-    arguments: ['@cmrf_core.core', '@string_translation']
+    arguments: ['@cmrf_core.core', '@string_translation', '@queue']
