Add missing functionality to 'Core' to match d7 module

--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,6 @@
         }
     ],
     "require": {
-        "civimrf/cmrf_abstract_core": "~0.4"
+        "civimrf/cmrf_abstract_core": "0.4"
     }
 }
