TP32076 Add 'clear cache' button, change 'profile' to 'connectors' on the views module. Add necessary core functions to get connectors.

--- a/cmrf_views/cmrf_views.links.action.yml
+++ b/cmrf_views/cmrf_views.links.action.yml
@@ -3,3 +3,9 @@ entity.cmrf_dataset.add_form:
   title: 'Add dataset'
   appears_on:
     - entity.cmrf_dataset.collection
+
+cmrf_views.clear_cache:
+  route_name: cmrf_views.clear_cache
+  title: 'Clear cache'
+  appears_on:
+    - entity.cmrf_dataset.collection
