--- a/cmrf_core.info.yml
+++ b/cmrf_core.info.yml
@@ -2,5 +2,6 @@ name: CMRF Core
 type: module
 description: CMRF CiviCRM REST Connection
 core: 8.x
-version 1.0
+core_version_requirement: ^8 || ^9
+version: 1.0
 package: CiviCRM
