--- a/cmrf_call_report/cmrf_call_report.info.yml
+++ b/cmrf_call_report/cmrf_call_report.info.yml
@@ -2,6 +2,8 @@ name: 'CMRF Call Report'
 type: module
 description: 'Shows the CiviCRM Api calls in a report.'
 core: 8.x
+core_version_requirement: ^8 || ^9
+version: 1.0
 package: CiviCRM
 dependencies:
   - cmrf_core
