--- a/cmrf_example/cmrf_example.info.yml
+++ b/cmrf_example/cmrf_example.info.yml
@@ -2,6 +2,8 @@ name: CMRF Example
 type: module
 description: Sample Module to do demonstrate Civi Calls
 core: 8.x
+core_version_requirement: ^8 || ^9
+version: 1.0
 package: CiviCRM
 dependencies:
   - cmrf_core
