--- a/cmrf_webform/cmrf_webform.info.yml
+++ b/cmrf_webform/cmrf_webform.info.yml
@@ -2,6 +2,8 @@ name: CMRF Webform
 type: module
 description: CiviMRF webform integration module. Allows to submit a webform to the CiviCRM api.
 core: 8.x
+core_version_requirement: ^8 || ^9
+version: 1.0
 package: CiviCRM
 dependencies:
   - drupal:webform
