--- a/cmrf_example/cmrf_example.info.yml
+++ b/cmrf_example/cmrf_example.info.yml
@@ -1,6 +1,6 @@
-name: CMRF Example
+name: CiviMRF Example
 type: module
-description: Sample Module to do demonstrate Civi Calls
+description: Sample Module to demonstrate CiviCRM API Calls
 core: 8.x
 core_version_requirement: ^8 || ^9
 package: CiviCRM
