--- a/cmrf_webform/cmrf_webform.links.action.yml
+++ b/cmrf_webform/cmrf_webform.links.action.yml
@@ -1,17 +1,17 @@
 entity.cmrf_webform_option_set.add_form:
   route_name: 'entity.cmrf_webform_option_set.add_form'
-  title: 'Add select options'
+  title: 'Add select options set'
   appears_on:
     - entity.cmrf_webform_option_set.collection
 
 entity.cmrf_webform_submission.add_form:
   route_name: 'entity.cmrf_webform_submission.add_form'
-  title: 'Add submission handlers'
+  title: 'Add submission handler'
   appears_on:
     - entity.cmrf_webform_submission.collection
 
 entity.cmrf_webform_default_value.add_form:
   route_name: 'entity.cmrf_webform_default_value.add_form'
-  title: 'Add default value handlers'
+  title: 'Add default values set'
   appears_on:
     - entity.cmrf_webform_default_value.collection
