[cmrf_call_report] Add "Entity" and "Action" columns in call report view

--- a/cmrf_call_report/config/optional/views.view.cmrf_calls.yml
+++ b/cmrf_call_report/config/optional/views.view.cmrf_calls.yml
@@ -80,6 +80,8 @@ display:
             create_date: create_date
             status: status
             connector_id: connector_id
+            entity: entity
+            action: action
             request: request
             reply: reply
             scheduled_date: scheduled_date
@@ -113,6 +115,20 @@ display:
               separator: ''
               empty_column: false
               responsive: ''
+            entity:
+              sortable: true
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            action:
+              sortable: true
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
             request:
               sortable: false
               default_sort_order: asc
@@ -128,14 +144,14 @@ display:
               empty_column: false
               responsive: ''
             scheduled_date:
-              sortable: false
+              sortable: true
               default_sort_order: asc
               align: ''
               separator: ''
               empty_column: false
               responsive: ''
             retry_count:
-              sortable: false
+              sortable: true
               default_sort_order: asc
               align: ''
               separator: ''
@@ -352,6 +368,104 @@ display:
           empty_zero: false
           hide_alter_empty: true
           plugin_id: standard
+        entity:
+          id: entity
+          table: civicrm_api_call
+          field: entity
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: standard
+          label: Entity
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: pre
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+        action:
+          id: action
+          table: civicrm_api_call
+          field: action
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: standard
+          label: Aktion
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: pre
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
         request:
           id: request
           table: civicrm_api_call
@@ -388,7 +502,7 @@ display:
             trim: true
             preserve_tags: ''
             html: false
-          element_type: ''
+          element_type: pre
           element_class: ''
           element_label_type: ''
           element_label_class: ''
@@ -437,7 +551,7 @@ display:
             trim: true
             preserve_tags: ''
             html: false
-          element_type: ''
+          element_type: pre
           element_class: ''
           element_label_type: ''
           element_label_class: ''
