Denote Drupal 10 compatibility in info files

--- a/cmrf_call_report/cmrf_call_report.info.yml
+++ b/cmrf_call_report/cmrf_call_report.info.yml
@@ -2,7 +2,7 @@ name: 'CiviMRF Call Report'
 type: module
 description: 'Shows the CiviCRM API calls in a report.'
 core: 8.x
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 package: CiviCRM
 dependencies:
   - cmrf_core
