--- a/cmrf_core.info.yml
+++ b/cmrf_core.info.yml
@@ -2,5 +2,5 @@ name: CiviMRF Core
 type: module
 description: CiviMRF CiviCRM REST Connection
 core: 8.x
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 package: CiviCRM
