Use plain_text as text format in call log view, as this is guaranteed to exist

--- a/cmrf_call_report/config/optional/views.view.cmrf_calls.yml
+++ b/cmrf_call_report/config/optional/views.view.cmrf_calls.yml
@@ -776,7 +776,7 @@ display:
           tokenize: false
           content:
             value: 'Each CiviCRM Api Call is logged. Use this rapport for monitoring and debugging.'
-            format: basic_html
+            format: plain_text
           plugin_id: text
       footer: {  }
       empty: {  }
