--- a/cmrf_views/cmrf_views.services.yml
+++ b/cmrf_views/cmrf_views.services.yml
@@ -2,3 +2,7 @@ services:
   cmrf_views.views:
     class: Drupal\cmrf_views\CMRFViews
     arguments: ['@cmrf_core.core']
+  cmrf_views.cache_clear_event_listener:
+    class: Drupal\cmrf_views\CacheClearEventListener
+    tags:
+      - { name: 'event_subscriber' }
